--- a/views/Admin/layouts/sidebar.ejs
+++ b/views/Admin/layouts/sidebar.ejs
@@ -66,6 +66,13 @@
         </li>
 
         <li class="nav-item">
+            <a class="nav-link" href="/admin/revenue">
+                <i class="fas fa-minus-square menu-icon"></i>
+                <span class="menu-title">Revenue </span>
+            </a>
+        </li>
+
+        <li class="nav-item">
             <a class="nav-link" href="/Auth/logout">
                 <i class="fas fa-power-off menu-icon"></i>
                 <span class="menu-title">Đăng xuất</span>
