--- a/views/pages/layouts/slider.ejs
+++ b/views/pages/layouts/slider.ejs
@@ -5,8 +5,8 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7 text-center" data-aos="fade">
 
-                    <h1 class="mb-2">Welcome To Suites</h1>
-                    <h2 class="caption">Hotel &amp; Resort</h2>
+                    <h1 class="mb-2"></h1>
+                    <h2 class="caption"></h2>
                 </div>
             </div>
         </div>
@@ -16,8 +16,6 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7 text-center" data-aos="fade">
-                    <h1 class="mb-2">Unique Experience</h1>
-                    <h2 class="caption">Enjoy With Us</h2>
                 </div>
             </div>
         </div>
@@ -27,8 +25,6 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7 text-center" data-aos="fade">
-                    <h1 class="mb-2">Relaxing Room</h1>
-                    <h2 class="caption">Your Room, Your Stay</h2>
                 </div>
             </div>
         </div>
